src/objects/CSS_Tracking__c.object
<CustomObject>
    <description>CSS team projects/enhancements</description>
    <fields>
        <fullName>Area_name__c</fullName>
        <description>Area that project, enhancement is related to</description>
        <inlineHelpText>Area that project, enhancement is related to</inlineHelpText>
        <label>Area_name</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDP/Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Architecture Recommendations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Projects</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BRD_in_place__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BRD created</description>
        <inlineHelpText>BRD created</inlineHelpText>
        <label>BRD in place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Contacts__c</fullName>
        <description>Responsible contacts from the business side (3 names max)</description>
        <inlineHelpText>Responsible contacts from the business side (3 names max)</inlineHelpText>
        <label>Business Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSS_Team_Member__c</fullName>
        <description>Team Member name</description>
        <inlineHelpText>Team Member name</inlineHelpText>
        <label>CSS Team Member</label>
        <picklist>
            <picklistValues>
                <fullName>Gabriel Oueidat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefferson Simoes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manuel Garcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snjezana Ivancan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Young Park</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ITS_Contacts__c</fullName>
        <description>Responsible contact from ITS side</description>
        <inlineHelpText>Responsible contact from ITS side</inlineHelpText>
        <label>ITS Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ITS_involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ITS involvment</description>
        <inlineHelpText>ITS involvment</inlineHelpText>
        <label>ITS involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Short description of project/enhancement</description>
        <inlineHelpText>Short description of project/enhancement</inlineHelpText>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Ending_Date__c</fullName>
        <description>Planned ending date of project/enhancement</description>
        <inlineHelpText>Planned ending date of project/enhancement</inlineHelpText>
        <label>Item Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Starting_Date__c</fullName>
        <description>Planned beginning date of project/enhancement</description>
        <inlineHelpText>Planned beginning date of project/enhancement</inlineHelpText>
        <label>Item Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Status__c</fullName>
        <description>Project/enhancement status</description>
        <inlineHelpText>Project/enhancement status</inlineHelpText>
        <label>Item Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not started yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_name__c</fullName>
        <description>Project/enhancement name</description>
        <inlineHelpText>Project/enhancement name</inlineHelpText>
        <label>Item_name</label>
        <picklist>
            <controllingField>Area_name__c</controllingField>
            <picklistValues>
                <fullName>Knowledge Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mass-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal (SSO) POC phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal - additional languages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Account &amp; Contact Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts and Contacts Clean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool for tracking the impact of changes in Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security &amp; SSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New users/profiles/roles/permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case field clean-up and potential move of fields to new objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real time KPIs in SF and Performance management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce DPC alignment (BSP, CASS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce-SAP connection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Monthly Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Manager Client Scorecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIDRA eDefault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBulletin project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter for Local Offices and Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto assignment of cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project 100% communications through Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEDA implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline Participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhanced Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIDRA cases tracking for recurrent small amounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto selection of “from” address when email is sent from a case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flagging account with last SIDRA case created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_comment__c</fullName>
        <label>Status comment</label>
        <type>TextArea</type>
    </fields>
    <label>CSS Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CSS_view1</fullName>
        <columns>NAME</columns>
        <columns>Item_name__c</columns>
        <columns>Area_name__c</columns>
        <columns>CSS_Team_Member__c</columns>
        <columns>Item_Starting_Date__c</columns>
        <columns>Item_Ending_Date__c</columns>
        <columns>Item_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>CSS view1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ITEM - {0000}</displayFormat>
        <label>CSS Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSS Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>